--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.8.0",
+    "classnames": "^2.2.6",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
