--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "chart.js": "^2.8.0",
+    "chartjs-plugin-datalabels": "^0.6.0",
     "classnames": "^2.2.6",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
