--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.6.0",
+    "chartjs-plugin-style": "^0.5.0",
     "classnames": "^2.2.6",
+    "fabric": "^3.4.0",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
