--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "node ./bin/www",
+    "client": "npm start --prefix ../client",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "dependencies": {
+    "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
