--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www",
     "server": "node ./bin/www",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm run client\" \"npm run server\""
+    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "heroku-postbuild": "npm install --prefix ../client npm run build --prefix ../client"
   },
   "dependencies": {
     "concurrently": "^5.0.0",
