--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-spring": "^8.0.27",
+    "react-youtube": "^7.9.0",
     "utf8": "^3.0.0"
   },
   "scripts": {
