--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "server": "node ./bin/www",
-    "client": "npm start --prefix ../client",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "heroku-postbuild": "npm install --prefix ../client npm run build --prefix ../client"
+    "heroku-postbuild": "npm install --prefix client npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.0.0",
