--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "node ./bin/www",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "heroku-postbuild": "cd client npm install  npm run build "
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "dependencies": {
     "concurrently": "^5.0.0",
