--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,13 @@
     "chartjs-plugin-style": "^0.5.0",
     "classnames": "^2.2.6",
     "fabric": "^3.4.0",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
     "utf8": "^3.0.0"
