--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
+    "recharts": "^2.0.0-beta.1",
     "styled-components": "^4.4.1",
     "utf8": "^3.0.0"
   },
