--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.19.0",
     "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
