--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "react": "^16.12.0",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
     "recharts": "^2.0.0-beta.1",
+    "redux": "^4.0.5",
     "styled-components": "^4.4.1",
     "utf8": "^3.0.0"
   },
