--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "chartjs-plugin-style": "^0.5.0",
     "classnames": "^2.2.6",
     "fabric": "^3.6.0",
+    "history": "^4.10.1",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
@@ -15,11 +16,13 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
     "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
     "utf8": "^3.0.0"
   },
