--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
+    "faker": "^4.1.0",
     "stylelint": "^12.0.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
