--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "fabric": "^3.6.0",
     "history": "^4.10.1",
+    "http-proxy-middleware": "^1.0.4",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "react": "^16.12.0",
@@ -48,7 +49,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "faker": "^4.1.0",
     "stylelint": "^12.0.1",
