--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "server": "node app.js",
+    "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
@@ -27,6 +27,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "nodemon": "^2.0.2"
   }
