--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "node app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,7 +27,6 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "nodemon": "^2.0.2"
   }
