--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.0.0-rc.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-style": "^0.5.0",
     "classnames": "^2.2.6",
     "fabric": "^3.6.0",
+    "graphql": "^15.0.0",
     "history": "^4.10.1",
     "http-proxy-middleware": "^1.0.4",
     "lodash": "^4.17.15",
