--- a/package.json
+++ b/package.json
@@ -10,24 +10,29 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "apollo-server": "^2.14.2",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.19.0",
-    "concurrently": "^5.0.0",
-    "cookie-parser": "~1.4.4",
+    "cloudinary": "^1.21.0",
+    "concurrently": "^5.2.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "d3": "^5.15.0",
+    "d3": "^5.16.0",
     "datauri": "^2.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-session": "^1.17.0",
+    "express-graphql": "^0.9.0",
+    "express-session": "^1.17.1",
+    "graphql": "^15.0.0",
+    "graphql-compose": "^7.18.1",
+    "graphql-compose-mongoose": "^7.3.8",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.7",
+    "mongoose": "^5.9.17",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
