--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "apollo-server": "^2.14.2",
+    "apollo-server-express": "^2.15.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.21.0",
     "concurrently": "^5.2.0",
