--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.2",
+    "@apollo/client": "^3.0.1",
+    "@apollo/link-context": "^2.0.0-beta.3",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.6.0",
     "chartjs-plugin-style": "^0.5.0",
