--- a/client/package.json
+++ b/client/package.json
@@ -5,23 +5,23 @@
   "dependencies": {
     "@apollo/client": "^3.0.1",
     "@apollo/link-context": "^2.0.0-beta.3",
+    "formik": "^2.1.5",
     "graphql": "^15.0.0",
     "history": "^4.10.1",
     "http-proxy-middleware": "^1.0.4",
-    "lodash": "^4.17.15",
-    "node-fetch": "^2.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
     "react-youtube": "^7.9.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "zustand": "^3.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
