--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "server": "nodemon app.js",
+    "server": "node app.js",
+    "devServer": "nodemon app.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run devServer\" \"npm run client\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client",
-    "start": "node app.js"
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
     "apollo-server-express": "^2.15.1",
